# augmented-awareness

./: .gitignore  AGENTS.md  GEMINI.md  README.md  aww.py  aww.toml  aww.toml.sample  aww_run.py  compare.py  compare_markdown.py  go.mod  go.sum  home.py  journal.go  pyproject.toml  run_comparison.sh  tags_analysis.py
.junie/: guidelines.md
aww/: analysis.py  ask.py  chat.py  colorizer.py  config.py  database.py  deps.py  file_manager.py  huggingface.py  local_llm.py  obsidian.py  prompt_engineering.py  prompts.py  rag.py  retro.py  retro_gen.py  safe_eval.py  session_manager.py  test_ask_recursive.py  test_chat.py  test_colorizer.py  test_huggingface.py  test_obsidian.py  test_rag.py  test_retro.py  test_retro_gen.py  test_session_manager.py  test_tags_map.py  test_tools.py  tools.py
aww-retro-obsidian-plugin/: GEMINI.md  README.md  data.json  main.js  main.ts  manifest.json
cmd/: amend.go  (+13 more)
python/: .gitignore  README.md  aww.py  datastore_web.py  obsidian.py  obsidian_web.py  pyproject.toml
python/aww/: context.py  llm.py  pyarrow_util.py  settings.py
python/aww/commands/: __init__.py  config.py  coverage.py  datastore.py  obsidian.py  schedule.py
python/aww/datastore/: __init__.py  models.py
python/aww/observe/: activitywatch.py  obsidian.py
python/aww/observe/activitywatch/: __init__.py
python/aww/observe/obsidian/: __init__.py  events.py  task_lists.py
python/aww/orient/: schedule.py  timeseries.py
python/aww/taqs/: models.py
python/test/: config.toml  test_activitywatch.py  test_events.py  test_get_model.py  test_llm.py  test_obsidian.py  test_pyarrow_util.py  test_schedule.py  test_settings.py  test_timeseries.py
python/test/vault/: 2025-03-30.md  2025-04-01.md
(+1157 files in other folders)
