[project]
name = "aww"
version = "0.1.0"
description = "Augmented Awareness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "jinja2>=3.1.6",
    "lancedb>=0.24.2",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "notebook>=7.4.5",
    "pandas-stubs==2.3.0.250703",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pydantic-ai==0.4.6",
    "pydantic-settings==2.10.1",
    "pylance>=0.32.0",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.0",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]
