[project]
name = "aww"
version = "0.1.0"
description = "Augmented Awareness"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "mistune>=3.1.3",
    "platformdirs>=4.3.7",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.1",
    "pydantic-ai>=0.0.48",
    "pydantic-settings>=2.8.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "streamlit>=1.44.0",
    "tomlkit>=0.13.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
